--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -41,82 +41,86 @@
 }
 
 .pricing__tab {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-} 
-
-.pricing__tab2 {
-    position: relative;
-    top: -20px;
-    box-shadow: 0 5px 5px 5px rgba(51, 51, 51, 0.3);
-    padding-left: 0;
-    margin-left: 37px;
-}
-
-.pricing__tab1 {
-    padding-left: 0;
-}
-
-.pricing__tab1 li:first-child, 
-.pricing__tab2 li:first-child,
-.pricing__tab3 li:first-child {
+    box-sizing: border-box;
+    width: 1170px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 370px;
-    height: 60px;
-    background-color: rgba(51, 51, 51, 1);
-    color: white;
+    justify-content: space-between;
+} 
+.pricing__list1 {
+    list-style-type: none;
+    padding: 0; 
+}
+.prace1 {
     font-family: 'OpenSans';
+    font-style: normal;
     font-weight: 700;
     font-size: 24px;
-}
-
-.pricing__tab1 li:nth-child(2), 
-.pricing__tab2 li:nth-child(2),
-.pricing__tab3 li:nth-child(2) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2px;
+    line-height: 33px;
+    text-transform: none;
+    color: #FFFFFF;
+    border: 2px solid #F5F5F5;
     width: 370px;
-    height: 100px;
-    background-color: rgba(51, 51, 51, 1);
-    color: white;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background: #333333;
+}
+.prace2 {
     font-family: 'Raleway';
+    font-style: normal;
     font-weight: 700;
     font-size: 36px;
-}
-
-
-.pricing__tab1 li:nth-child(3), 
-.pricing__tab2 li:nth-child(3),
-.pricing__tab3 li:nth-child(3) {
-    display: flex;
+    line-height: 42px;
     align-items: center;
-    justify-content: center;
-    margin-top: 2px;
+    text-align: center;
+    color: #FFFFFF;
+    border: 2px solid #F5F5F5;
     width: 370px;
-    height: 50px;
-    background-color: rgba(51, 51, 51, 1);
-    color: white;
+    height: 110px;
+    line-height: 110px;
+    text-align: center;
+    background: #333333 ; 
+}
+.prace3 {
     font-family: 'Raleway';
+    font-style: normal;
     font-weight: 400;
     font-size: 18px;
-}
-
-.pricing__tab1 li:nth-last-child(-n+6), 
-.pricing__tab2 li:nth-last-child(-n+6),
-.pricing__tab3 li:nth-last-child(-n+6) {
-    display: flex;
+    line-height: 21px;
     align-items: center;
-    justify-content: center;
-    width: 368px;
+    text-transform: none;
+    color: rgba(255, 255, 255, 0.5);
+    border: 2px solid #F5F5F5;
+    width: 370px;
     height: 50px;
-    border: 1px solid rgba(51, 51, 51, 1);
-    border-top: 0;
+    line-height: 50px;
+    text-align: center;
+    background: #333333
 }
-
-
+.prace4 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    align-items: center;
+    text-align: center;
+    text-transform: none;
+    color: #86878B;   
+    border: 2px solid #F5F5F5;
+    width: 370px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: #ffffff;
+}
+.list2 {
+    position: relative;
+    top: -20px;  
+}
+.list__shadow {
+    filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
+}
 
