--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,21 @@ body {
     max-width: 1170px;
     margin: 0 auto;
 }
+@media (max-width:1170px) {
+    .container {
+        max-width: 1170px;
+    }     
+}
+@media (max-width:992px) {
+    .container {
+        max-width: 750px;
+    }     
+}
+@media (max-width:767px) {
+    .container {
+        max-width: none;
+    }     
+}
 
 li {
     list-style-type: none;
